--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 before_install:
   - sudo apt-get update -qq;
-  - sudo apt-get install -qq opencl-headers;
+  - sudo apt-get install -qq fglrx opencl-headers;
   - bash .travis/amd_sdk.sh;
   - tar -xjf AMD-SDK.tar.bz2;
   - AMDAPPSDKROOT=${HOME}/AMDAPPSDK;
