--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
 
 before_install:
+  - echo "HUHU"
   - sudo apt-get update -qq;
   - sudo apt-get install -qq opencl-headers;
   - bash .travis/amd_sdk.sh;
@@ -17,7 +18,7 @@ before_install:
   - chmod +x ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
   - ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
   - echo "HUHU"
-  - ls /usr/lib/libOpen
+  - ls /usr/lib/libO*
 
 install:
   - pip install .
