--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ python:
   - "2.7"
 
 before_install:
-  - echo "HUHU"
   - sudo apt-get update -qq;
   - sudo apt-get install -qq opencl-headers;
   - bash .travis/amd_sdk.sh;
@@ -18,7 +17,7 @@ before_install:
   - chmod +x ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
   - ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
   - echo "HUHU"
-  - ls /usr/lib/libO*
+  - ls ${AMDAPPSDKROOT}/lib/x86_64/*
 
 install:
   - pip install .
