--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 python:
   - "2.7"
-compiler:
-  - clang
-  
+
 before_install:
   - gcc -v
   - sudo apt-get update -qq;
+  - sudo apt-get install gcc-4.8
+  - sudo apt-get install g++-4.8
   - sudo apt-get install -qq opencl-headers;
   - bash .travis/amd_sdk.sh;
   - tar -xjf AMD-SDK.tar.bz2;
