--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ python:
 
 before_install:
   - gcc -v
-  - sudo apt-get update -qq;
-  - sudo apt-get install gcc-4.8
-  - sudo apt-get install g++-4.8
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -qq
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
   - sudo apt-get install -qq opencl-headers;
   - bash .travis/amd_sdk.sh;
   - tar -xjf AMD-SDK.tar.bz2;
