--- a/.travis.yml
+++ b/.travis.yml
@@ -8,24 +8,22 @@ before_install:
   - sudo apt-get update -qq
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+  - sudo apt-get install -qq opencl-headers;
+  - bash .travis/amd_sdk.sh;
+  - tar -xjf AMD-SDK.tar.bz2;
+  - AMDAPPSDKROOT=${HOME}/AMDAPPSDK;
+  - export OPENCL_VENDOR_PATH=${AMDAPPSDKROOT}/etc/OpenCL/vendors;
+  - mkdir -p ${OPENCL_VENDOR_PATH};
+  - sh AMD-APP-SDK*.sh --tar -xf -C ${AMDAPPSDKROOT};
+  - echo libamdocl64.so > ${OPENCL_VENDOR_PATH}/amdocl64.icd;
+  - export LD_LIBRARY_PATH=${AMDAPPSDKROOT}/lib/x86_64:${LD_LIBRARY_PATH};
+  - export CMAKE_LIBRARY_PATH=${AMDAPPSDKROOT}/lib/x86_64;
+  - chmod +x ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
+  - ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
+  - echo "HUHU"
+  - ls ${AMDAPPSDKROOT}/lib/x86_64/*
+  - echo ${LD_LIBRARY_PATH}
 
-
-#   - sudo apt-get install -qq opencl-headers;
-#   - bash .travis/amd_sdk.sh;
-#   - tar -xjf AMD-SDK.tar.bz2;
-#   - AMDAPPSDKROOT=${HOME}/AMDAPPSDK;
-#   - export OPENCL_VENDOR_PATH=${AMDAPPSDKROOT}/etc/OpenCL/vendors;
-#   - mkdir -p ${OPENCL_VENDOR_PATH};
-#   - sh AMD-APP-SDK*.sh --tar -xf -C ${AMDAPPSDKROOT};
-#   - echo libamdocl64.so > ${OPENCL_VENDOR_PATH}/amdocl64.icd;
-#   - export LD_LIBRARY_PATH=${AMDAPPSDKROOT}/lib/x86_64:${LD_LIBRARY_PATH};
-#   - export CMAKE_LIBRARY_PATH=${AMDAPPSDKROOT}/lib/x86_64;
-#   - chmod +x ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
-#   - ${AMDAPPSDKROOT}/bin/x86_64/clinfo;
-#   - echo "HUHU"
-#   - ls ${AMDAPPSDKROOT}/lib/x86_64/*
-#   - echo ${LD_LIBRARY_PATH}
-
-# install:
-#   - pip install .
+install:
+  - pip install .
 
