try switch to osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+os: osx
+
 language: python
 python:
   - 3.6
@@ -9,12 +11,12 @@ branches:
   - master
   - develop
 
-addons:
-  apt:
-    packages:
-      # On Linux we need OpenBLAS, on OSX Apple Accelerate is present by default
-      - libopenblas-dev
-      - liblapack-dev
+# addons:
+#   apt:
+#     packages:
+#       # On Linux we need OpenBLAS, on OSX Apple Accelerate is present by default
+#       - libopenblas-dev
+#       - liblapack-dev
 
 install:
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
@@ -24,13 +26,13 @@ install:
       export LABEL="dev";
     fi
 
-  - sudo apt-get update
+#  - sudo apt-get update
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -O miniconda.sh;
     else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
