--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 os: osx
 
-language: python
+language: generic
 python:
   - 3.6
   - 3.5
@@ -18,6 +18,12 @@ branches:
 #       - libopenblas-dev
 #       - liblapack-dev
 
+before_install:
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python3; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python3; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
+    
 install:
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
   - if [[ "$BRANCH" == "master" ]]; then
