--- a/meta.yaml
+++ b/meta.yaml
@@ -27,7 +27,8 @@ requirements:
     - python {{ python }}
     - numpy >=1.11.0
     - scipy
-    - pyopencl ==2017.2+cl12 # [win64]
+#    - pyopencl ==2017.2+cl12 # [win64]
+    - pyopencl
     - pyopencl # [not win64]
     - configparser # [py2k]
     - reikna >=0.6.7
