move to pytest in meta.yaml

--- a/meta.yaml
+++ b/meta.yaml
@@ -4,15 +4,15 @@
 package:
   name: {{ name }}
   {% if environ.get('BRANCH') == "master" %}
-  version: {{ setupdata['version'] }}
+  version: {{ setupdata.get('version') }}
   {% else %}
   version: "{{ GIT_DESCRIBE_TAG }}_{{ GIT_BUILD_STR }}"
   {% endif %}
 
 source:
-  # path: ..
-  git_url: git://github.com/tlambert03/gputools
-  git_rev: "{{ environ.get('BRANCH') }}"
+  path: .
+  # git_url: git://github.com/tlambert03/gputools
+  # git_rev: "{{ environ.get('BRANCH') }}"
 
 build:
   number: 0
@@ -25,7 +25,7 @@ requirements:
     - setuptools
   run:
     - python {{ python }}
-    - numpy >=1.11.0
+    - numpy >=1.15.0
     - scipy
 #    - pyopencl ==2017.2+cl12 # [win64]
     - pyopencl
@@ -37,14 +37,14 @@ requirements:
 
 test:
   requires:
-    - nose
+    - pytest
     - pocl # [linux]
     - scikit-image
     - termcolor
     - funcsigs ==0.4 # [py35]
     - funcsigs ==0.4 # [py34]
   commands:
-    - nosetests -v tests
+    - pytest -v tests
 
 
 about:
