--- a/meta.yaml
+++ b/meta.yaml
@@ -10,9 +10,9 @@ package:
   {% endif %}
 
 source:
-  # path: .
-  git_url: git://github.com/tlambert03/gputools
-  git_rev: "{{ environ.get('BRANCH') }}"
+  path: .
+  # git_url: git://github.com/tlambert03/gputools
+  # git_rev: "{{ environ.get('BRANCH') }}"
 
 build:
   number: 0
@@ -25,13 +25,13 @@ requirements:
     - setuptools
   run:
     - python {{ python }}
-    - numpy >=1.15.4
-    - scipy >=1.2.0
+    - numpy
+    - scipy
 #    - pyopencl ==2017.2+cl12 # [win64]
     - pyopencl
 #    - pyopencl # [not win64]
     - configparser # [py2k]
-    - reikna ==0.6.8
+    - reikna
 #    - ocl-icd ==1.2.0 # [linux]
 #    - scikit-tensor
 
