--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,16 @@ matrix:
     # - os: linux
     #   python: 3.6
 
+
+before_install:
+    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    - conda info -a
+
 install:
   - conda install -c conda-forge pybind11 
   - conda install -c conda-forge pyopencl 
