--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,16 @@ jobs:
 
   test-macos:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.12"
       - name: Install OpenCL
-        run: brew install pocl
+        run: |
+          brew install pocl
+          sudo mkdir -p /Library/OpenCL/Vendors
+          sudo ln -s /opt/homebrew/etc/OpenCL/vendors/*.icd /Library/OpenCL/Vendors/
       - name: Install package
         run: pip install . && pip install -r tests/requirements.txt
       - name: Run tests
