--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,9 @@ jobs:
       - name: Install OpenCL
         run: brew install pocl
       - name: Install package
-        env:
-          CMAKE_PREFIX_PATH: /opt/homebrew
         run: |
-          pip install --no-binary pyopencl pyopencl
+          ICD_PREFIX=$(brew --prefix opencl-icd-loader)
+          CMAKE_PREFIX_PATH="$ICD_PREFIX" pip install --no-binary pyopencl pyopencl
           pip install . && pip install -r tests/requirements.txt
       - name: Verify OpenCL
         run: |
