--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,6 @@ jobs:
                   print(f'    error: {e}')
           "
       - name: Run tests
+        env:
+          LIBRARY_PATH: /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib
         run: pytest -v tests/
